# ed_people_recognition

./: .travis.yml  CMakeLists.txt  README.md  package.xml
ed_people_detection/: CMakeLists.txt  README.md  package.xml
ed_people_detection/include/ed_people_detection/: people_detection_plugin.h
ed_people_detection/src/: people_detection_plugin.cpp
ed_people_detection_msgs/: CMakeLists.txt  package.xml
ed_people_detector/: CMakeLists.txt  package.xml
ed_people_detector/include/ed_people_detector/: people_detector_plugin.h
ed_people_detector/src/: people_detector_plugin.cpp
ed_people_detector_msgs/: CMakeLists.txt  package.xml
ed_people_detector_msgs/srv/: EdDetectPeople.srv
ed_people_recognition/: CMakeLists.txt  README.md  package.xml  plugins.xml
ed_people_recognition/include/ed_people_recognition/: people_recognition_plugin.h
ed_people_recognition/src/: people_recognition_plugin.cpp
ed_people_recognition_msgs/: CMakeLists.txt  package.xml
ed_people_recognition_msgs/srv/: EdRecognizePeople.srv
src/: people_detector_plugin.cpp
