<?xml version="1.0"?>
<package>
  <name>ed_people_detector</name>
  <version>0.0.1</version>
  <description>ed_people_detector</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_people_detector_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>ed</run_depend>
  <run_depend>ed_people_detector_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
