<?xml version="1.0"?>
<package>
  <name>ed_people_detector_msgs</name>
  <version>0.0.1</version>
  <description>ed_people_detector_msgs</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>message_runtime</run_depend>

</package>
