<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_people_recognition</name>
  <version>0.0.1</version>
  <description>ed_people_recognition</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ed</build_depend>
  <build_depend>ed_people_recognition_msgs</build_depend>
  <build_depend>people_recognition_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <exec_depend>ed</exec_depend>
  <exec_depend>ed_people_recognition_msgs</exec_depend>
  <exec_depend>people_recognition_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>

</package>
