<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ed_people_recognition</name>
  <version>0.0.1</version>
  <description>ed_people_recognition</description>

  <maintainer email="MatthijsBurgh@outlook.com">Matthijs van der Burgh</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ed</depend>
  <depend>ed_people_recognition_msgs</depend>
  <depend>people_recognition_msgs</depend>
  <depend>roscpp</depend>

  <export>
    <ed plugin="${prefix}/plugins.xml" />
  </export>

</package>
